add mobile menu. Fix blocks size

--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -3,15 +3,33 @@
     <div class="logo to-top">
       <a href="/"><img src="/img/logo.svg" alt=""></a>
     </div>
+
     <div class="menu">
       <a href="/#efficiently" class="to-top" data-anchor="efficiently">360° view</a>
       <a href="/about.html" class="to-top">About us</a>
       <a href="/#key_features" class="to-top" data-anchor="key_features">Key features</a>
       <a href="/#video" class="to-top" data-anchor="video">Overview</a>
     </div>
+
     <a href="#" class="button-white-bordered support-us to-top">
       <span>Support us</span>
       <img src="/img/arrow-link.svg" alt="">
     </a>
+
+    <button class="mobile_menu_btn"></button>
+
+    <div class="mobile_menu_wrapper">
+      <div class="menu">
+        <a href="/#efficiently" class="to-top" data-anchor="efficiently">360° view</a>
+        <a href="/about.html" class="to-top">About us</a>
+        <a href="/#key_features" class="to-top" data-anchor="key_features">Key features</a>
+        <a href="/#video" class="to-top" data-anchor="video">Overview</a>
+      </div>
+
+      <a href="#" class="button-white-bordered support-us to-top">
+        <span>Support us</span>
+        <img src="/img/arrow-link.svg" alt="">
+      </a>
+    </div>
   </div>
 </div>
