dev animation hello section

--- a/src/html/_hello.html
+++ b/src/html/_hello.html
@@ -1,10 +1,10 @@
 <section id="hello">
   <div class="container">
-    <div class="name-container">
-      <div class="name text-line">
-        <h1>MIDI</h1>
+    <div class="hidden-text-container">
+      <div class="name">
+        <h1 class="text">MIDI</h1>
         <div class="circle"></div>
-        <h1>9</h1>
+        <h1 class="text">9</h1>
       </div>
     </div>
 
