dev: animation, fix: mobile menu, smooth scroll anchor links

--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -5,10 +5,10 @@
     </div>
 
     <div class="menu">
-      <a href="/#efficiently" class="to-top" data-anchor="efficiently">360° view</a>
+      <a href="/" class="to-top" data-anchor="efficiently">360° view</a>
       <a href="/about.html" class="to-top">About us</a>
-      <a href="/#key_features" class="to-top" data-anchor="key_features">Key features</a>
-      <a href="/#video" class="to-top" data-anchor="video">Overview</a>
+      <a href="/" class="to-top" data-anchor="key_features">Key features</a>
+      <a href="/" class="to-top" data-anchor="video">Overview</a>
     </div>
 
     <a href="#" class="button-white-bordered support-us to-top">
@@ -20,10 +20,10 @@
 
     <div class="mobile_menu_wrapper">
       <div class="menu">
-        <a href="/#efficiently" class="to-top" data-anchor="efficiently">360° view</a>
-        <a href="/about.html" class="to-top">About us</a>
-        <a href="/#key_features" class="to-top" data-anchor="key_features">Key features</a>
-        <a href="/#video" class="to-top" data-anchor="video">Overview</a>
+        <a href="/"  data-anchor="efficiently">360° view</a>
+        <a href="/about.html">About us</a>
+        <a href="/" data-anchor="key_features">Key features</a>
+        <a href="/" data-anchor="video">Overview</a>
       </div>
 
       <a href="#" class="button-white-bordered support-us to-top">
