--- a/src/html/_key_features.html
+++ b/src/html/_key_features.html
@@ -5,8 +5,8 @@
       <span>Key features</span>
     </div>
 
-    <div class="row flex-lg-row-reverse">
-      <div class="col-12 col-xl-7">
+    <div class="row">
+      <div class="wrapper_slider">
         <div class="slider-for">
           <div>
             <div class="slider-slide-container">
@@ -80,7 +80,7 @@
                 <span>Easy software updates</span>
               </div>
               <div class="photo">
-                <video autoplay loop poster="/img/slider/slide-6.jpg">
+                <video autoplay loop muted playsinline poster="/img/slider/slide-6.jpg">
                   <source
                       src="/files/MIDI9-Update_Dragndrop.mp4"
                       type="video/mp4"/>
@@ -119,7 +119,7 @@
           </div>
         </div>
       </div>
-      <div class="col-12 col-xl-5 wrapper_slider-nav">
+      <div class="wrapper_slider-nav">
         <div class="slider-nav">
           <div>
             <div class="slider-title">
