--- a/src/html/_kickstarter.html
+++ b/src/html/_kickstarter.html
@@ -12,7 +12,7 @@
                         <form action="" method="post">
                             <input class="input-text" type="email" placeholder="Enter your email" required>
                             <div class="input-error">Please provide a property formatted email address</div>
-                            <button class="button" type="submit"><span>Subscribe</span></button>
+                            <button class="button" type="button"><span>Subscribe</span></button>
                         </form>
                     </div>
                 </div>
