--- a/src/html/about/_5-screen.html
+++ b/src/html/about/_5-screen.html
@@ -1,6 +1,10 @@
 <section id="about__5-screen">
   <div class="container">
 
+    <div class="m_poster">
+      <img src="/img/about_s-5_m.jpg" alt="">
+    </div>
+
     <div class="poster">
       <div class="text-block">
         <div class="title">
