--- a/src/html/head.html
+++ b/src/html/head.html
@@ -11,6 +11,9 @@
     <link rel="icon" href="/img/favicon/favicon.svg" sizes="any" type="image/svg+xml">
     <link rel="apple-touch-icon" href="/img/favicon/apple-touch-icon.png" sizes="180x180">
 
+    <link rel="preload" href="/fonts/SF-Pro-Text-Bold.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="/fonts/SF-Pro-Text-Regular.woff2" as="font" type="font/woff2" crossorigin>
+
     <!-- Add the slick-theme.css if you want default styling -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <!-- Add the slick-theme.css if you want default styling -->
