--- a/src/html/_header.html
+++ b/src/html/_header.html
@@ -12,8 +12,14 @@
     </div>
 
     <a href="#" class="button-white-bordered support-us to-top">
-      <span>Support us</span>
-      <img src="/img/arrow-link.svg" alt="">
+      <div>
+        <span>Support us</span>
+        <img src="/img/arrow-link.svg" alt="">
+      </div>
+      <div class="hover">
+        <span>Support us</span>
+        <img src="/img/arrow-link.svg" alt="">
+      </div>
     </a>
 
     <button class="mobile_menu_btn"></button>
@@ -27,8 +33,14 @@
       </div>
 
       <a href="#" class="button-white-bordered support-us to-top">
-        <span>Support us</span>
-        <img src="/img/arrow-link.svg" alt="">
+        <div>
+          <span>Support us</span>
+          <img src="/img/arrow-link.svg" alt="">
+        </div>
+        <div class="hover">
+          <span>Support us</span>
+          <img src="/img/arrow-link.svg" alt="">
+        </div>
       </a>
     </div>
   </div>
