--- a/src/html/about/_7-screen.html
+++ b/src/html/about/_7-screen.html
@@ -13,7 +13,7 @@
                 </div>
             </section>
 
-            <div id="subscribe">
+            <div id="subscribe" class="subscribe_full_width">
                 <div class="shine-card">
                     <div class="title-card"><span>Subscribe to our newslatter</span></div>
                     <div class="text">
