--- a/src/404.html
+++ b/src/404.html
@@ -7,7 +7,15 @@
         @@include('html/_header.html')
 
         <main>
-
+            <div class="page_404">
+                <div class="container">
+                    <div class="content_404">
+                        <img src="/img/404.png" alt="">
+                        <span>The page you’re looking for does not exist.</span>
+                        <a href="/" class="link">Back to home</a>
+                    </div>
+                </div>
+            </div>
         </main>
 
         @@include('html/_footer.html')
