--- a/src/html/_key_features.html
+++ b/src/html/_key_features.html
@@ -8,12 +8,14 @@
     <div class="row">
       <div class="wrapper_slider">
         <div class="slider-for">
+
           <div>
             <div class="slider-slide-container">
               <div class="name">
                 <span>19-Inch Rack-Mounted Design</span>
               </div>
               <div class="photo">
+                <img src="/img/slider/01.svg" alt="" class="point">
                 <img src="/img/slider/slide-1.jpg" alt="">
               </div>
               <div class="description">
@@ -21,12 +23,14 @@
               </div>
             </div>
           </div>
+
           <div>
             <div class="slider-slide-container">
               <div class="name">
                 <span>9 multi-functional knobs</span>
               </div>
               <div class="photo">
+                <img src="/img/slider/02.svg" alt="" class="point">
                 <img src="/img/slider/slide-2.jpg" alt="">
               </div>
               <div class="description">
@@ -34,6 +38,7 @@
               </div>
             </div>
           </div>
+
           <div>
             <div class="slider-slide-container">
               <div class="name">
@@ -48,12 +53,14 @@
               </div>
             </div>
           </div>
+
           <div>
             <div class="slider-slide-container">
               <div class="name">
                 <span>Customizable LED lighting</span>
               </div>
               <div class="photo">
+                <img src="/img/slider/04.svg" alt="" class="point">
                 <img src="/img/slider/slide-4.jpg" alt="">
               </div>
               <div class="description">
@@ -61,6 +68,7 @@
               </div>
             </div>
           </div>
+
           <div>
             <div class="slider-slide-container">
               <div class="name">
@@ -74,6 +82,7 @@
               </div>
             </div>
           </div>
+
           <div>
             <div class="slider-slide-container">
               <div class="name">
@@ -91,6 +100,7 @@
               </div>
             </div>
           </div>
+
           <div>
             <div class="slider-slide-container">
               <div class="name">
@@ -104,12 +114,14 @@
               </div>
             </div>
           </div>
+
           <div>
             <div class="slider-slide-container">
               <div class="name">
                 <span>USB-C connection</span>
               </div>
               <div class="photo">
+                <img src="/img/slider/08.svg" alt="" class="point">
                 <img src="/img/slider/slide-8.jpg" alt="">
               </div>
               <div class="description">
@@ -117,6 +129,7 @@
               </div>
             </div>
           </div>
+
         </div>
       </div>
       <div class="wrapper_slider-nav">
