dev: animate letter h1 hello section

--- a/src/html/_hello.html
+++ b/src/html/_hello.html
@@ -1,6 +1,7 @@
 <section id="hello">
   <div class="container">
-    <div class="hidden-text-container">
+    <div class="">
+<!--      hidden-text-container-->
       <div class="name">
         <h1 class="text">MIDI</h1>
         <div class="circle"></div>
