--- a/src/html/_hello.html
+++ b/src/html/_hello.html
@@ -3,14 +3,16 @@
     <div class="">
 <!--      hidden-text-container-->
       <div class="name">
-        <h1 class="text">MIDI</h1>
+        <h1 class="text text__1">MIDI</h1>
         <div class="circle"></div>
-        <h1 class="text">9</h1>
+        <h1 class="text text__2">9</h1>
       </div>
     </div>
 
     <div class="render">
-      <img src="/img/header-render.png" class="">
+        <div class="render_img">
+            <img src="/img/header-render.png" class="">
+        </div>
     </div>
     <div class="descriptions">
       <div class="left text1 to-animate">
