--- a/src/html/about/_7-screen.html
+++ b/src/html/about/_7-screen.html
@@ -16,7 +16,7 @@
             <div id="subscribe" class="subscribe_full_width">
                 <div class="shine-card">
                     <div class="title-card"><span>Subscribe to our newslatter</span></div>
-                    <div class="text">
+                    <div class="shine-card__text">
                         <span>Join our subscribers list to get the latest news, updates and special offers delivered directly in your inbox</span>
                     </div>
                     <div class="subscribe-form">
