--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="no-webp">
+<html>
     @@include('html/head.html', {
         "title":"MIDI-9 — 19-inch rackmount MIDI controller",
         "description":"Designed for professionals who work daily with a combination of analog and digital gear. With 9 rotary knobs that double as buttons, it gives you precise and convenient control over your VST plugins directly from the panel, eliminating the need for bulky desktop controllers."
