--- a/src/html/_kickstarter.html
+++ b/src/html/_kickstarter.html
@@ -5,7 +5,7 @@
             <div id="subscribe">
                 <div class="shine-card">
                     <div class="title-card"><span>Subscribe to our newslatter</span></div>
-                    <div class="text">
+                    <div class="shine-card__text">
                         <span>Join our subscribers list to get the latest news, updates and special offers delivered directly in your inbox</span>
                     </div>
                     <div class="subscribe-form">
@@ -21,7 +21,7 @@
             <div id="software">
                 <div class="shine-card">
                     <div class="title-card"><span>Software updates</span></div>
-                    <div class="text">
+                    <div class="shine-card__text">
                         <span>Download the latest software version <br>and user manual</span>
                     </div>
                     <button class="button" disabled><span>Coming soon</span></button>
