--- a/src/html/_hello.html
+++ b/src/html/_hello.html
@@ -3,9 +3,9 @@
     <div class="">
 <!--      hidden-text-container-->
       <div class="name">
-        <h1 class="text text__1">MIDI</h1>
+        <h1 class="text text__1"><span class="letter">M</span><span class="letter">I</span><span class="letter">D</span><span class="letter">I</span></h1>
         <div class="circle"></div>
-        <h1 class="text text__2">9</h1>
+        <h1 class="text text__2"><span class="letter">9</span></h1>
       </div>
     </div>
 
