--- a/src/html/_hello.html
+++ b/src/html/_hello.html
@@ -11,7 +11,7 @@
 
     <div class="render">
         <div class="render_img">
-            <img src="/img/header-render.png" class="">
+            <img src="/img/hero-image.png" class="">
         </div>
     </div>
     <div class="descriptions">
