--- a/src/html/_key_features.html
+++ b/src/html/_key_features.html
@@ -15,6 +15,7 @@
                 <span>19-Inch Rack-Mounted Design</span>
               </div>
               <div class="photo">
+                <div class="timeline"></div>
                 <img src="/img/slider/01.svg" alt="" class="point">
                 <img src="/img/slider/slide-1.jpg" alt="">
               </div>
@@ -30,6 +31,7 @@
                 <span>9 multi-functional knobs</span>
               </div>
               <div class="photo">
+                <div class="timeline"></div>
                 <img src="/img/slider/02.svg" alt="" class="point">
                 <img src="/img/slider/slide-2.jpg" alt="">
               </div>
@@ -45,6 +47,7 @@
                 <span>Two modes of operation</span>
               </div>
               <div class="photo">
+                <div class="timeline"></div>
                 <img src="/img/slider/slide-3.jpg" alt="">
               </div>
               <div class="description">
@@ -60,6 +63,7 @@
                 <span>Customizable LED lighting</span>
               </div>
               <div class="photo">
+                <div class="timeline"></div>
                 <img src="/img/slider/04.svg" alt="" class="point">
                 <img src="/img/slider/slide-4.jpg" alt="">
               </div>
@@ -75,6 +79,7 @@
                 <span>High-Quality Build</span>
               </div>
               <div class="photo">
+                <div class="timeline"></div>
                 <img src="/img/slider/slide-5.jpg" alt="">
               </div>
               <div class="description">
@@ -89,6 +94,7 @@
                 <span>Easy software updates</span>
               </div>
               <div class="photo">
+                <div class="timeline"></div>
                 <video autoplay loop muted playsinline poster="/img/slider/slide-6.jpg">
                   <source
                       src="/files/MIDI9-Update_Dragndrop.mp4"
@@ -107,6 +113,7 @@
                 <span>Support for multiple units</span>
               </div>
               <div class="photo">
+                <div class="timeline"></div>
                 <img src="/img/slider/slide-7.jpg" alt="">
               </div>
               <div class="description">
@@ -121,6 +128,7 @@
                 <span>USB-C connection</span>
               </div>
               <div class="photo">
+                <div class="timeline"></div>
                 <img src="/img/slider/08.svg" alt="" class="point">
                 <img src="/img/slider/slide-8.jpg" alt="">
               </div>
