--- a/src/html/head.html
+++ b/src/html/head.html
@@ -14,6 +14,8 @@
     <link rel="preload" href="/fonts/SF-Pro-Text-Bold.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="preload" href="/fonts/SF-Pro-Text-Regular.woff2" as="font" type="font/woff2" crossorigin>
 
+    <link rel="prefetch prerender" href="/img/hero-image.png" />
+
     <!-- Add the slick-theme.css if you want default styling -->
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
     <!-- Add the slick-theme.css if you want default styling -->
