--- a/src/html/_efficiently.html
+++ b/src/html/_efficiently.html
@@ -6,19 +6,17 @@
 
         <div class="viewer">
             <div class="img-list">
-                <img src="/img/efficiently.png" class="">
-                <img src="/img/efficiently.png" class="">
-                <img src="/img/efficiently.png" class="">
-                <img src="/img/efficiently.png" class="">
-                <img src="/img/efficiently.png" class="">
-
-                <img src="/img/efficiently.png" class="active">
-
-                <img src="/img/efficiently.png" class="">
-                <img src="/img/efficiently.png" class="">
-                <img src="/img/efficiently.png" class="">
-                <img src="/img/efficiently.png" class="">
-                <img src="/img/efficiently.png" class="">
+                <img src="/img/render/01.png">
+                <img src="/img/render/02.png">
+                <img src="/img/render/03.png">
+                <img src="/img/render/04.png">
+                <img src="/img/render/05.png">
+                <img src="/img/render/06.png" class="active">
+                <img src="/img/render/07.png">
+                <img src="/img/render/08.png">
+                <img src="/img/render/09.png">
+                <img src="/img/render/10.png">
+                <img src="/img/render/11.png">
             </div>
 
             <div class="nav-scroll">
